--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -770,6 +770,7 @@ p-header
   margin: -5px 0 0 16px;
   -webkit-transform: translateZ(0);
           transform: translateZ(0);
+  z-index: -1;
 }
 .p-header__menu-design > span {
   -webkit-transition: -webkit-transform 0.2s ease-out;
@@ -793,7 +794,7 @@ p-header
 .p-header__menu-design.active > span:nth-child(1) {
   -webkit-transform: rotate(-30deg);
           transform: rotate(-30deg);
-  margin-top: 14px;
+  margin-top: 4px;
 }
 .p-header__menu-design.active > span:nth-child(2) {
   display: none;
@@ -802,6 +803,44 @@ p-header
   -webkit-transform: rotate(30deg);
           transform: rotate(30deg);
   margin-top: -1px;
+}
+
+.active.p-header .p-header__nav-container {
+  display: block;
+  position: absolute;
+  background: #fff;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 101vh;
+  padding: 80px 12% 0;
+}
+.active.p-header .p-header__nav {
+  display: block;
+}
+.active.p-header .p-header__nav-list {
+  display: block;
+  width: 100%;
+}
+.active.p-header .p-header__nav-item {
+  border-bottom: 1px solid #2B68C9;
+  padding: 0.8rem 1.2rem 0.8rem 0;
+  background: url(../img/arw/blue_right.svg) no-repeat 99% 50%;
+  background-size: 15px;
+}
+.active.p-header .p-header__nav-entry {
+  width: 100%;
+  height: 4rem;
+  border-radius: 2rem;
+  padding: 0 1.5rem;
+  margin-top: 2rem;
+}
+.active.p-header .p-header__nav-entry span {
+  height: 4rem;
+}
+.active.p-header .p-header__nav-entry span::after {
+  top: 42%;
 }
 
 /*
