--- a/assets/sass/layout/_l-header.scss
+++ b/assets/sass/layout/_l-header.scss
@@ -9,7 +9,7 @@ l-header
   width: 100%;
   top: 0;
   height: 60px;
-  background-color: inc.$main-background-color;
+  background-color: inc.$color-wht;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16);
   @include inc.mq(vr) {
     height: 100px;
