--- a/assets/sass/object/component/_c-searchbox.scss
+++ b/assets/sass/object/component/_c-searchbox.scss
@@ -5,7 +5,7 @@ c-searchbox
 -----------------------------------------------------*/
 .c-searchbox {
   border-radius: 99px;
-  border: 1px solid inc.$main-color;
+  border: 1px solid inc.$color-blu;
   line-height: 49px;
   padding-left: 25px;
   width: 100%;
