--- a/assets/sass/object/project/_p-breadcrumb.scss
+++ b/assets/sass/object/project/_p-breadcrumb.scss
@@ -43,7 +43,7 @@ p-breadcrumb
           display: block;
           bottom: 1px;
           left: 0;
-          background-color: inc.$border-color;
+          background-color: inc.$color-blu;
           transform: scale(0, 1);
           transform-origin: left top;
         }
@@ -69,7 +69,7 @@ p-breadcrumb
         display: block;
         bottom: 1px;
         left: 0;
-        background-color: inc.$border-color;
+        background-color: inc.$color-blu;
         transform: scale(0, 1);
         transform-origin: left top;
       }
