--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -43,6 +43,16 @@ dd {
   margin: 0;
   padding: 0;
 }
+/* ul,
+ol {
+  padding-left: 1rem;
+}
+li {
+  margin-bottom: .5rem;
+}
+li:last-child {
+  margin-bottom: 0;
+} */
 
 /* Set core body defaults */
 /* bodyのデフォルトを定義 */
@@ -107,7 +117,7 @@ common
 //////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
 
 h1, h2, h3, h4, h5 {font-weight: normal;}
-p { margin: 0 0 1.5em; padding: 0; line-height:200%;}
+p { margin: 0 0 2.5rem; padding: 0; line-height:200%;}
 img {border: 0; line-height: 0; max-width:100%; margin:0; padding:0; vertical-align: middle; height: auto; flex-shrink: 0;}
 hr { display: none; }
 table { margin: 0; padding: 0; border-collapse: collapse;}
