--- a/assets/sass/object/project/_p-table.scss
+++ b/assets/sass/object/project/_p-table.scss
@@ -7,58 +7,82 @@ p-table
   margin: 0 auto;
   width: 100%;
   &__body {
-    width: 100%;
-    &:first-child {
-      border-top: 1px solid inc.$border-color;
+    th {
+      background: inc.$color-blu;
+      color: inc.$color-wht;
+      font-weight: 500;
+      border-bottom: 1px solid inc.$color-wht;
+      width: 10%;
+      text-align: center;
+      vertical-align: middle;
     }
-    & > tr {
-      width: 100%;
-      border-bottom: 1px solid inc.$border-color;
-      padding: 20px 0;
-      display: flex;
-      justify-content: space-between;
+    td {
+      width: 30%;
+      font-weight: 300;
+      text-align: center;
+      vertical-align: middle;
+      @include inc.sizing(padding, wide, 24px, sp, 16px);
+      border: 1px solid inc.$color-light-blu;
+    }
+    tr:last-child th {
+      border-bottom: none;
     }
   }
   &__head {
-    @include inc.mq(tab) {
-      @include inc.sizing(line-height, wide, 20px, sp, 30px);
-    }
-    line-height: 1.6em;
-    width: 18.9%;
-    @include inc.sizingRem(font-size, wide, 16px, sp, 13px);
-  }
-  &__date {
-    @include inc.mq(tab) {
-      width: 37%;
-    }
-    width: 50%;
-  }
-  &__data {
-    @include inc.mq(tab) {
-      @include inc.sizing(line-height, wide, 20px, sp, 30px);
-    }
-    @include inc.sizingRem(font-size, wide, 16px, sp, 13px);
-    line-height: 1.6em;
-    font-weight: 400;
-    width: 75%;
-    word-break: break-all;
-    & > img {
-      width: 100%;
-    }
-    & > .iframe-wrap {
-      width: 100%;
-      & > iframe {
-        width: 100%;
-        height: auto;
-        aspect-ratio: 16/9;
+    th {
+      background: inc.$color-light-blu;
+      @include inc.sizing(gap, wide, 16px, sp, 14px);
+      font-weight: 500;
+      text-align: center;
+      vertical-align: middle;
+      @include inc.sizing(padding-top, wide, 16px, sp, 12px);
+      @include inc.sizing(padding-bottom, wide, 16px, sp, 12px);
+      &.p-table--bg_non {
+        background: none;
+      }
+      & + th {
+        border-left: 1px solid inc.$color-wht;
       }
     }
-    & > figure {
-      width: 100%;
-      & > img {
-        width: 100%;
-        height: auto;
-      }
-    }
+    // @include inc.mq(tab) {
+    //   @include inc.sizing(line-height, wide, 20px, sp, 30px);
+    // }
+    // line-height: 1.6em;
+    // width: 18.9%;
+    // @include inc.sizingRem(font-size, wide, 16px, sp, 13px);
   }
+  // &__date {
+  //   @include inc.mq(tab) {
+  //     width: 37%;
+  //   }
+  //   width: 50%;
+  // }
+  // &__data {
+  //   @include inc.mq(tab) {
+  //     @include inc.sizing(line-height, wide, 20px, sp, 30px);
+  //   }
+  //   @include inc.sizingRem(font-size, wide, 16px, sp, 13px);
+  //   line-height: 1.6em;
+  //   font-weight: 400;
+  //   width: 75%;
+  //   word-break: break-all;
+  //   & > img {
+  //     width: 100%;
+  //   }
+  //   & > .iframe-wrap {
+  //     width: 100%;
+  //     & > iframe {
+  //       width: 100%;
+  //       height: auto;
+  //       aspect-ratio: 16/9;
+  //     }
+  //   }
+  //   & > figure {
+  //     width: 100%;
+  //     & > img {
+  //       width: 100%;
+  //       height: auto;
+  //     }
+  //   }
+  // }
 }
